--- a/src/app/spa/spa.component.html
+++ b/src/app/spa/spa.component.html
@@ -49,8 +49,8 @@
   <!-- <app-table (onDelete)="deleteMovie( $event )" [moviesList]="moviesList"></app-table> -->
 
   <br>
-  <div class="container-fluid container-table">
-    <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8 table-responsive">
+  <div class="container-fluid container-table table-responsive">
+    <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8 align-middle">
   
       <!-- Position Column -->
       <ng-container matColumnDef="position">
